--- a/cont.css
+++ b/cont.css
@@ -7,8 +7,8 @@ header {
   margin: 0;
   color: #24e05c;
 }
-nav{
-    text-align: end;
+nav {
+  text-align: end;
 }
 nav ul {
   list-style: none;
@@ -30,16 +30,16 @@ nav ul li a {
 nav ul li a:hover {
   color: #00ff59;
 }
-.conctacto{
-    text-align: center;
-    color: #45a049;
+.conctacto {
+  text-align: center;
+  color: #45a049;
 }
-.informacion{
-    text-align: center;
-    font-size: 20px;
+.informacion {
+  text-align: center;
+  font-size: 20px;
 }
-h3{
-    text-align: center;
+h3 {
+  text-align: center;
 }
 
 form {
@@ -60,7 +60,7 @@ input[type="email"] {
 }
 
 input[type="submit"] {
-  background-color: #4CAF50;
+  background-color: #4caf50;
   color: white;
   padding: 10px 20px;
   border: none;
@@ -71,13 +71,10 @@ input[type="submit"]:hover {
   background-color: #45a049;
 }
 
-
-
-
-  .mensaje {
+.mensaje {
   text-align: center;
   color: #fff;
-  background-color: #4CAF50;
+  background-color: #4caf50;
   padding: 10px;
   margin-top: 20px;
   display: none;
@@ -88,6 +85,12 @@ input[type="submit"]:hover {
 }
 ul li {
   margin-bottom: 50px;
+}
+button {
+  background-color: #24e040;
+  color: #f0ebeb;
+  border: none;
+  margin-left: 46%;
 }
 @media screen and (max-width: 500px) {
   /* Estilos para el menú en tablets y pantallas más grandes */
@@ -103,5 +106,8 @@ ul li {
 
   p {
     font-size: 17px;
+  }
+  button {
+    margin-left: 37%;
   }
 }
