--- a/index.css
+++ b/index.css
@@ -39,29 +39,50 @@ nav ul li a:hover {
 .container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
-
-.item {
-  font-family: cursive;
-  width: 200px;
-  height: 200px;
-  padding: 30px;
-  font-size: 20px;
+section {
+  text-align: center;
 }
 ul li {
   margin-bottom: 50px;
 }
+video {
+  width: 665px;
+  height: 315px;
+}
+.rojo {
+  color: rgb(21, 255, 0);
+}
+.popup-class {
+  border-radius: 0%;
+}
+button {
+  background-color: #24e040;
+  color: #f0ebeb;
+  border: none;
+  margin-left: 46%;
+}
 @media screen and (max-width: 500px) {
   /* Estilos para el menú en tablets y pantallas más grandes */
 
-  nav ul li{
-  display: flex;
-  flex-direction: column;
+  nav ul li {
+    display: flex;
+    flex-direction: column;
   }
-  h1{
+  h1 {
     font-size: 25px;
   }
-  p{
+  p {
     font-size: 17px;
+  }
+  video {
+    width: 393px;
+  }
+  iframe {
+    width: 393px;
+  }
+  button {
+    margin: 0px;
   }
 }
