--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 header {
   background-color: #0c0606;
   padding: 20px;
@@ -68,11 +74,35 @@ img:hover {
 ul li {
   margin-bottom: 50px;
 }
+p {
+  color: #777;
+  line-height: 1.5;
+}
+footer {
+  background-color: #1b1717;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   background-color: #24e040;
-  color: #f0ebeb;
+  color: #fff;
+  padding: 10px 20px;
   border: none;
-  margin-left: 46%;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #555;
 }
 @media screen and (max-width: 500px) {
   /* Estilos para el menú en tablets y pantallas más grandes */
@@ -97,8 +127,5 @@ button {
   .contenedor img {
     width: 150px;
     height: 150px;
-  }
-  button {
-    margin-left: 37%;
   }
 }
