--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-header {
+/* header {
   background-color: #0c0606;
   padding: 20px;
 }
@@ -44,12 +44,7 @@ nav ul li a:hover {
 main {
   text-align: center;
 }
-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
+
 ul li {
   margin-bottom: 50px;
 }
@@ -69,6 +64,113 @@ button {
   border: none;
   margin-left: 35rem;
   margin-right: 35rem;
+} */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-color: #0c0606;
+  padding: 20px;
+}
+
+.titulo-header {
+  margin: 0;
+  color: #24e05c;
+}
+nav {
+  text-align: end;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+
+  margin-right: 50px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #ebf0ed;
+}
+
+nav ul li a:hover {
+  color: #00ff59;
+}
+ul li {
+  margin-bottom: 50px;
+}
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.titulo {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+main {
+  margin-top: 20px;
+}
+
+h2 {
+  color: #666;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+p {
+  color: #777;
+  line-height: 1.5;
+}
+
+.videos-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  margin: 10px;
+}
+
+video {
+  max-width: 100%;
+  height: 40rem;
+}
+
+footer {
+  background-color: #1b1717;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  background-color: #24e040;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #555;
 }
 @media screen and (max-width: 500px) {
   /* Estilos para el menú en tablets y pantallas más grandes */
@@ -88,9 +190,5 @@ button {
   }
   iframe {
     width: 393px;
-  }
-  button {
-    margin-left: 0rem;
-    margin-right: 10rem;
   }
 }
