--- a/css/serv.css
+++ b/css/serv.css
@@ -1,3 +1,8 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
 header {
   background-color: #0c0606;
   padding: 20px;
@@ -5,6 +10,7 @@ header {
 
 .titulo {
   text-align: center;
+  margin-bottom: 10px;
 }
 
 h1 {
@@ -37,7 +43,7 @@ nav ul li a:hover {
   color: #1aff00;
 }
 
-.titulo {
+/* .titulo {
   text-align: center;
   font-size: 24px;
   margin-bottom: 10px;
@@ -57,15 +63,83 @@ ul {
 ul li {
   margin-bottom: 50px;
 }
+p {
+  color: #777;
+  line-height: 1.5;
+} */
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+ul li {
+  margin-bottom: 50px;
+}
+p {
+  color: #777;
+  line-height: 1.5;
+}
+.servicio {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 20px;
+}
+.titulo-icono {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 20%;
+}
+.titulo-icono h3 {
+  text-align: center;
+}
+
+.servicio img {
+  width: 150px;
+  height: 150px;
+  margin-left: 30%;
+  border-radius: 3px;
+}
+.contenido {
+  flex-grow: 1;
+}
+
+.contenido p {
+  margin: 0;
+  margin-left: 10px;
+}
+.titulo {
+  text-align: center;
+}
+
+footer {
+  background-color: #1b1717;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 button {
   background-color: #24e040;
-  color: #f0ebeb;
+  color: #fff;
+  padding: 10px 20px;
   border: none;
-  margin-left: 46%;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #555;
 }
 .descripcion {
   display: none;
-  border: solid 1px #24e040;
   margin-left: 100px;
   margin-right: 100px;
 }
@@ -89,5 +163,15 @@ section i {
   }
   button {
     margin: 0px;
+  }
+  .servicio img {
+    width: 100px;
+    height: 100px;
+    margin-left: 10%;
+    border-radius: 3px;
+  }
+  .contenido p {
+    margin: 0;
+    margin-left: 5px;
   }
 }
