--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,127 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+header {
+  background-color: #0c0606;
+  padding: 20px;
+}
 
+.titulo-header {
+  margin: 0;
+  color: #14f156;
+}
+nav {
+  text-align: end;
+}
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline-block;
+
+  margin-right: 50px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #ebf0ed;
+}
+
+nav ul li a:hover {
+  color: #00ff59;
+}
+ul li {
+  margin-bottom: 50px;
+}
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.titulo {
+  color: #333;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+main {
+  margin-top: 20px;
+}
+
+h2 {
+  color: #666;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+p {
+  color: #777;
+  line-height: 1.5;
+}
+
+.videos-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  margin: 10px;
+}
+
+video {
+  max-width: 100%;
+  height: 40rem;
+}
+
+footer {
+  background-color: #1b1717;
+  padding: 20px;
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+button {
+  background-color: #24e040;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+button:hover {
+  background-color: #555;
+}
+@media screen and (max-width: 500px) {
+  /* Estilos para el menú en tablets y pantallas más grandes */
+
+  nav ul li {
+    display: flex;
+    flex-direction: column;
+  }
+  h1 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 17px;
+  }
+  video {
+    width: 393px;
+  }
+  iframe {
+    width: 393px;
+  }
+}
